--- a/styles/contactScreen.scss
+++ b/styles/contactScreen.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables.scss';
+
 .container{
     max-width: 100vw;
 }
@@ -7,6 +9,24 @@
     margin-top: 1rem;
     display: flex;
     flex-direction: row;
+    align-items: center;
     flex-wrap: wrap;
 }
+.search-bar{
+    margin-top: 2rem;
+    margin-left: 2rem;
+    width: 40vw;
+    text-decoration: none;
+    border: none;
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
+    border-radius: 25px;
+    background-color: $cardColor;
+    transition: all 1s;
+    color: aliceblue;
+    font-weight: 100;
 
+    &:focus{
+        outline: 1px double $textGreen;
+    }
+}
