--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -1,6 +1,10 @@
+@import '../styles/variables.scss';
+
+
 .navbar{
     height: 10vh;
     width: 100%;
-    background: #000000;
-    color: green;
+    background: $cardColor;
+    color: $textGreen;
+    box-shadow: 10px 0px 10px rgba(0,0,0,0.1);
 }
