added responsive css code

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,3 +2,4 @@ $background: rgb(29, 28, 28);
 $cardColor: rgb(37, 37, 37);
 $textGreen: rgb(65, 141, 99);
 $textGreenLight: rgb(139, 158, 145);
+$footerBackground: rgba(0,0,0);
