--- a/styles/contactScreen.scss
+++ b/styles/contactScreen.scss
@@ -2,11 +2,12 @@
 
 .container{
     max-width: 100vw;
+    height:auto;
 }
 .contact-section{
     width: 90%;
     margin: 0 auto;
-    margin-top: 1rem;
+    margin-top: 3rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -15,12 +16,13 @@
 .search-bar{
     margin-top: 2rem;
     margin-left: 2rem;
-    width: 40vw;
+    width: 50vw;
     text-decoration: none;
     border: none;
     font-size: 1.2rem;
     padding: 1rem 2rem;
     border-radius: 25px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
     background-color: $cardColor;
     transition: all 1s;
     color: aliceblue;
@@ -28,5 +30,26 @@
 
     &:focus{
         outline: 1px double $textGreen;
+    }
+}
+
+.footer{
+    margin: 0;
+    background:$footerBackground;
+}
+
+
+@media only screen and (max-width: 991px) {
+    .search-bar{
+        font-size: 1rem;
+        width: 85vw;
+        margin: 1rem 0;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
