--- a/styles/contactCard.scss
+++ b/styles/contactCard.scss
@@ -1,5 +1,6 @@
 @import "../styles/variables.scss";
 
+//------------------------------------------The SCSS file for each contact Card displayed ----------------------------------//
 
 .contact-card{
     margin: 1rem 2rem;
