--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,6 @@
+
+// here we are storing scss variables which we wil import to other files
+
 $background: rgb(29, 28, 28);
 $cardColor: rgb(37, 37, 37);
 $textGreen: rgb(65, 141, 99);
